[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccf-data"
version = "0.1.0"
description = "Python client for the Canadian Climate Framing (CCF) data platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Antoine Lemorphic", email = "antoine.lemor@usherbrooke.ca"},
    {name = "Tristan Boursier", email = "tristan.boursier@sciencespo.fr"},
]
keywords = ["climate", "framing", "media", "newspapers", "canada", "ccf", "nlp", "annotations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Sociology",
]
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "responses>=0.23",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/antoinelemor/python-ccf-data"
Documentation = "https://github.com/antoinelemor/python-ccf-data#readme"
Repository = "https://github.com/antoinelemor/python-ccf-data"
Issues = "https://github.com/antoinelemor/python-ccf-data/issues"
"Project Website" = "https://ccf-project.ca"
"Data Explorer" = "https://data.ccf-project.ca"

[tool.setuptools.packages.find]
include = ["ccf_data*"]

[tool.setuptools.package-data]
ccf_data = ["codebook.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
